@@ -1,3 +1,8 @@
+2011-01-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/47473
+	* gcc.dg/torture/pr47473.c: New test.
+
 2011-01-26  Jan Hubicka  <jh@suse.cz>
 
 	PR target/47237
